# oop-cnu-term-project

./: CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  class-diagram.mermaid  객체지향설계_텀프로젝트_1조_final.docx
include/: Enums.h
include/core/: IInstruction.h  InstructionFactory.h  VMContext.h  VMException.h  VMLoader.h  VmLoader.h
include/instructions/: AddInstruction.h  BeInstruction.h  BneInstruction.h  CmpInstruction.h  JmpInstruction.h  MovInstruction.h  MulInstruction.h  PopInstruction.h  PrintInstruction.h  PushInstruction.h  SubInstruction.h
src/: main.cpp
src/core/: IInstruction.cpp  InstructionFactory.cpp  VMContext.cpp  VMLoader.cpp  VmLoader.cpp
src/instructions/: AddInstruction.cpp  BeInstruction.cpp  BneInstruction.cpp  CmpInstruction.cpp  JmpInstruction.cpp  MovInstruction.cpp  MulInstruction.cpp  PopInstruction.cpp  PrintInstruction.cpp  PushInstruction.cpp  SubInstruction.cpp
test/: encode.py  run_tests.py
test/text/: add.txt  cmp_be.txt  cmp_bne.txt  jmp.txt  loop.txt  mov_print.txt  mul.txt  stack.txt  sub.txt
